--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -373,16 +373,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/britain-is-open-for-business">Britain is open for business</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/foreign-secretary-statement-on-the-death-of-nelson-mandela">Foreign Secretary statement on the death of Nelson Mandela</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/new-uk-ambassador-and-permanent-representative-to-the-united-nations-and-other-international-organisations-in-geneva-14-april-2015--2">New UK Ambassador and Permanent Representative to the UN and Other International Organisations in Geneva</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/priority-visas-to-be-opened-up-to-other-categories-for-south-india">Priority visas to be opened up to other categories for South India</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/213493.es-419">Misión Comercial Ecuatoriana de Negocios Responsables en Londres</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/twenty-third-session-of-the-universal-periodic-review-geneva-2-to-13-november-2015--2">Twenty-Third Session of the Universal Periodic Review, Geneva, 2 to 13 November 2015</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--35">TURKS AND CAICOS POST CABINET MEETING STATEMENT</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--9">Advice for British nationals in Kolkata</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--31">Advice for British nationals in Kolkata</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/uk-visa-applicant-arrested-for-fraud--2">UK Visa Applicant Arrested for Fraud</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/188434.lt">JK bus surengtas G8 šalių susitikimas demencijos klausimais</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-boosts-fight-against-illegal-wildlife-trade--2">UK boosts fight against illegal wildlife trade</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-expatriates-its-your-vote-dont-lose-it--4">British expatriates - “It’s your vote, don’t lose it”</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/283719.es-419">Fiscal de la Nación recibió al Crown Prosecution Service</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/indian-ocean-tsunami-10th-anniversary-prime-ministers-message">Indian Ocean tsunami 10th anniversary: Prime Minister&rsquo;s message</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/193179.ur">برطانوی سینئر فارن  آفس منسٹر بیرونیس وارثی کی پاکستان آمد</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--6">TURKS AND CAICOS POST CABINET MEETING STATEMENT</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/new-york-celebrates-british-culture-and-creativity-with-sir-ian-mckellen--6">New York celebrates British culture and creativity with Sir Ian McKellen</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/247572.es-419">México y el Reino Unido en la Cumbre Mundial para Erradicar la Violencia Sexual en Conflictos Armados</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/240607.es-419">Los exámenes TOEFL o TEIC no se aceptarán para tramitar visas de estudio</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
