--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -404,16 +404,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='imported-documents'>Imported documents</h2><h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.nfdc.gov.uk" class="govuk-link">New Forest District Council</a></li>
-      <li><a href="http://www.richmond.gov.uk/" class="govuk-link">London Borough of Richmond upon Thames Council</a></li>
-      <li><a href="http://www.bristol.gov.uk" class="govuk-link">Bristol City Council</a></li>
-      <li><a href="http://www.hyndburnbc.gov.uk" class="govuk-link">Hyndburn Borough Council</a></li>
+      <li><a href="http://www.west-norfolk.gov.uk" class="govuk-link">King&rsquo;s Lynn and West Norfolk Borough Council</a></li>
       <li><a href="https://www.nhs.uk/active10" class="govuk-link">Active 10</a></li>
-      <li><a href="http://www.stevenage.gov.uk" class="govuk-link">Stevenage Borough Council</a></li>
-      <li><a href="http://www.warwickshire.gov.uk/" class="govuk-link">Warwickshire County Council</a></li>
-      <li><a href="http://www.manchester.gov.uk" class="govuk-link">Manchester City Council</a></li>
-      <li><a href="http://www.glasgow.gov.uk" class="govuk-link">Glasgow City Council</a></li>
-      <li><a href="http://www.rbkc.gov.uk/" class="govuk-link">Royal Borough of Kensington and Chelsea Council</a></li>
+      <li><a href="http://www.charnwood.gov.uk" class="govuk-link">Charnwood Borough Council</a></li>
+      <li><a href="http://www.cyberaware.gov.uk" class="govuk-link">Cyber Aware</a></li>
+      <li><a href="http://www.richmond.gov.uk/" class="govuk-link">London Borough of Richmond upon Thames Council</a></li>
+      <li><a href="http://www.hinckleyandbosworthonline.org.uk" class="govuk-link">Hinckley and Bosworth Borough Council</a></li>
+      <li><a href="http://www.tewkesburybc.gov.uk" class="govuk-link">Tewkesbury Borough Council</a></li>
+      <li><a href="http://www.shetland.gov.uk" class="govuk-link">Shetland Islands Council</a></li>
+      <li><a href="http://www.northdown.gov.uk" class="govuk-link">North Down Borough Council</a></li>
+      <li><a href="http://publicappointments.cabinetoffice.gov.uk/" class="govuk-link">Public Appointments - Cabinet Office</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
