--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -371,16 +371,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttp//www.nfdc.gov.uk">New Forest District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.richmond.gov.uk/">London Borough of Richmond upon Thames Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.tewkesburybc.gov.uk">Tewkesbury Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.shetland.gov.uk">Shetland Islands Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.cyberaware.gov.uk">Cyber Aware</a></li>
 <li><a href="https://www.gov.ukhttps//www.lewes-eastbourne.gov.uk">Lewes District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.telford.gov.uk">Telford &amp; Wrekin Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.hinckleyandbosworthonline.org.uk">Hinckley and Bosworth Borough Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.rother.gov.uk">Rother District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.northdown.gov.uk">North Down Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.hinckleyandbosworthonline.org.uk">Hinckley and Bosworth Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.shetland.gov.uk">Shetland Islands Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.organdonation.nhs.uk/">Organ donation</a></li>
+<li><a href="https://www.gov.ukhttps//getintoteaching.education.gov.uk/">Get Into Teaching</a></li>
+<li><a href="https://www.gov.ukhttp//www.tewkesburybc.gov.uk">Tewkesbury Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.woking.gov.uk/">Woking Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.thanet.gov.uk">Thanet District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.walthamforest.gov.uk/">London Borough of Waltham Forest Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
