--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -373,16 +373,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/265215.ja">英国ショッピングウィーク　 トークショーを連日開催</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/289214.es-419">Discurso de Su Majestad la Reina Isabel II con motivo de la Visita de Estado del Presidente de México, Enrique Peña Nieto</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/186354.it">Il Regno Unito lancia un piano d&#39;azione per l&#39;impresa ed i diritti umani</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/statement-on-trade-deal-between-eu-and-us">Statement on trade deal between EU and US</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/285657.pt">#INFRASTRUCTUREisGREAT</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/mongol-rally--2">Mongol Rally: travel advice for Ukraine</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/big-ideas-get-them-off-the-ground-in-the-uk--2">Big ideas? Get them off the ground in the UK</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/uk-delegation-announces-its-2013-industry-day-the-future-of-nato-business--2">UK Delegation announces its 2013 Industry Day: The Future of NATO Business</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/229395.zh-tw">海外申請英國護照的費用調降</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/284564.es-419">Embajada Británica otorgará 10 becas para estudiar inglés en línea</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/175818.es-419">Estrategia internacional del Reino Unido en materia educativa</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/197379.zh-tw">英國貿易文化辦事處休館公告</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-muscat-condolence-book-for-the-baroness-thatcher-of-kesteven">British Embassy Muscat: Condolence book for the Baroness Thatcher of Kesteven</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/230454.es-419">Oportunidad Laboral en la Embajada Británica Guatemala</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/297168.cs">Jaké reformě EU chce Británie napomoci?</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/jeremy-hunt-meets-japanese-pm-amid-life-sciences-week">Jeremy Hunt meets Japanese PM amid Life Sciences Week </a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/britain-is-open-for-business">Britain is open for business</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/human-rights-council-17th-session-of-universal-periodic-review-working-group-geneva-21-october-to-1-november-2013--5">Human Rights Council: 17th Session of Universal Periodic Review Working Group, Geneva, 21 October to 1 November 2013</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/240607.es-419">Los exámenes TOEFL o TEIC no se aceptarán para tramitar visas de estudio</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-visa-application-centre-changes-location--2">UK Visa Application Centre changes location</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
