--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -373,16 +373,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/175818.es-419">Estrategia internacional del Reino Unido en materia educativa</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/197379.zh-tw">英國貿易文化辦事處休館公告</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-muscat-condolence-book-for-the-baroness-thatcher-of-kesteven">British Embassy Muscat: Condolence book for the Baroness Thatcher of Kesteven</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/230454.es-419">Oportunidad Laboral en la Embajada Británica Guatemala</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/297168.cs">Jaké reformě EU chce Británie napomoci?</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/jeremy-hunt-meets-japanese-pm-amid-life-sciences-week">Jeremy Hunt meets Japanese PM amid Life Sciences Week </a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/britain-is-open-for-business">Britain is open for business</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/human-rights-council-17th-session-of-universal-periodic-review-working-group-geneva-21-october-to-1-november-2013--5">Human Rights Council: 17th Session of Universal Periodic Review Working Group, Geneva, 21 October to 1 November 2013</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/240607.es-419">Los exámenes TOEFL o TEIC no se aceptarán para tramitar visas de estudio</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/uk-visa-application-centre-changes-location--2">UK Visa Application Centre changes location</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/burma-cleaning-up-financial-crime--2">Burma: Cleaning up financial crime</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/aviation-security-update">Aviation security update</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/262824.es-419">Visitan México el Príncipe de Gales y la Duquesa de Cornwall</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/220711.pt">Alex Ellis quer mais estudantes mineiros no Reino Unido</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/294453.pt">VISITA REAL</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/201030.it">Revisione Competenze UE: via alla terza fase della consultazione</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/264569.es-419">Ministro para Latinoamérica participa en el Chile Day 2014</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/240607.es-419">Los exámenes TOEFL o TEIC no se aceptarán para tramitar visas de estudio</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/human-rights-council-17th-session-of-universal-periodic-review-working-group-geneva-21-october-to-1-november-2013--5">Human Rights Council: 17th Session of Universal Periodic Review Working Group, Geneva, 21 October to 1 November 2013</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
