--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -405,15 +405,15 @@
 </div>
 <h2 id='imported-documents'>Imported documents</h2><h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
       <li><a href="http://www.nfdc.gov.uk" class="govuk-link">New Forest District Council</a></li>
-      <li><a href="http://www.richmond.gov.uk/" class="govuk-link">London Borough of Richmond upon Thames Council</a></li>
-      <li><a href="http://www.tewkesburybc.gov.uk" class="govuk-link">Tewkesbury Borough Council</a></li>
+      <li><a href="http://www.rbkc.gov.uk/" class="govuk-link">Royal Borough of Kensington and Chelsea Council</a></li>
+      <li><a href="http://www.waverley.gov.uk/" class="govuk-link">Waverley Borough Council</a></li>
+      <li><a href="https://www.organdonation.nhs.uk/" class="govuk-link">Organ donation</a></li>
+      <li><a href="http://www.shetland.gov.uk" class="govuk-link">Shetland Islands Council</a></li>
+      <li><a href="http://www.cyberaware.gov.uk" class="govuk-link">Cyber Aware</a></li>
+      <li><a href="http://www.telford.gov.uk" class="govuk-link">Telford &amp; Wrekin Council</a></li>
+      <li><a href="http://www.rother.gov.uk" class="govuk-link">Rother District Council</a></li>
       <li><a href="http://www.dorsetforyou.com/weymouthandportland" class="govuk-link">Weymouth and Portland Borough Council</a></li>
-      <li><a href="http://publicappointments.cabinetoffice.gov.uk/" class="govuk-link">Public Appointments - Cabinet Office</a></li>
-      <li><a href="http://www.merton.gov.uk/" class="govuk-link">London Borough of Merton Council</a></li>
-      <li><a href="http://www.ealing.gov.uk" class="govuk-link">London Borough of Ealing Council</a></li>
-      <li><a href="http://www.dudley.gov.uk" class="govuk-link">Dudley Metropolitan Borough Council</a></li>
-      <li><a href="http://www.harborough.gov.uk" class="govuk-link">Harborough District Council</a></li>
-      <li><a href="http://www.antrim.gov.uk/" class="govuk-link">Antrim Borough Council</a></li>
+      <li><a href="http://www.northdown.gov.uk" class="govuk-link">North Down Borough Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
