--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -373,16 +373,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/289214.es-419">Discurso de Su Majestad la Reina Isabel II con motivo de la Visita de Estado del Presidente de México, Enrique Peña Nieto</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/186354.it">Il Regno Unito lancia un piano d&#39;azione per l&#39;impresa ed i diritti umani</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/hms-protector-marks-centenary-of-the-rescue-of-the-crew-of-endurance">HMS PROTECTOR marks centenary of the rescue of the crew of ENDURANCE</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/240607.es-419">Los exámenes TOEFL o TEIC no se aceptarán para tramitar visas de estudio</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/human-rights-council-17th-session-of-universal-periodic-review-working-group-geneva-21-october-to-1-november-2013--5">Human Rights Council: 17th Session of Universal Periodic Review Working Group, Geneva, 21 October to 1 November 2013</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/uk-visa-application-centre-changes-location--2">UK Visa Application Centre changes location</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/burma-cleaning-up-financial-crime--2">Burma: Cleaning up financial crime</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/220711.pt">Alex Ellis quer mais estudantes mineiros no Reino Unido</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/294453.pt">VISITA REAL</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/201030.it">Revisione Competenze UE: via alla terza fase della consultazione</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/197379.zh-tw">英國貿易文化辦事處休館公告</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-muscat-condolence-book-for-the-baroness-thatcher-of-kesteven">British Embassy Muscat: Condolence book for the Baroness Thatcher of Kesteven</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/289211.pt">CARIOCAS GLOBAIS</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-in-cairo-closed-to-the-public--3">British Embassy in Cairo closed to the public</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-ambassador-honours-positive-role-of-gaa-at-london-gala-dinner--2">British Ambassador to Ireland honours role of the Gaelic Athletic Association</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/171850.es-419">G8: Oportunidades para todos, incluyendo Honduras</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/279923.es">El Reino Unido acoge la Cumbre Mundial del Derecho – 23 a 25 de febrero</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-supports-freedom-of-expression-in-cameroon">UK supports Freedom of Expression in Cameroon</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/atlantic-hurricane-season-are-you-prepared--3">Atlantic Hurricane Season: Are you prepared?</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
